--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 ExtraTreesregression_model.pkl filter=lfs diff=lfs merge=lfs -text
 Trees_model.pkl filter=lfs diff=lfs merge=lfs -text
+model.pkl filter=lfs diff=lfs merge=lfs -text
